--- a/12_Ch_13_Optimization/142-Gradient_Descent.ipynb
+++ b/12_Ch_13_Optimization/142-Gradient_Descent.ipynb
@@ -52,60 +52,80 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Gradient Descent\n",
+    "## Introduction\n",
     "\n",
-    "Our intuition so far is that we should try to \"walk downhill\" and that the negative gradient $-\\nabla f(\\vv x)$ points in the direction of steepest descent at point $x$. Can we turn this into an algorithm for minimizing (at least locally) a cost function $f(x)$?\n",
+    "Our intuition so far is that we should try to \"walk downhill\" and that the negative gradient $-\\nabla f(\\vv x)$ tells us the steepest direction of descent at point $\\vv x$. Can we turn this into an algorithm for minimizing (at least locally) a cost function $f(\\vv x)$?\n",
     "\n",
-    "This intuition is precisely the motivation behind the gradient descent algorithm, which starting with an initial guess $x^{(0)}$ iteratively updates the current best guess $x^{(k)}$ of $x^*$ according to:\n",
+    "This intuition is precisely the motivation behind the _gradient descent algorithm_, which starting with an initial guess $\\vv x^{(0)}$, iteratively updates the current best guess $\\vv x^{(k)}$ of $\\vv x^*$ according to:\n",
     "\n",
-    "\\[x^{(k+1)} = x^{(k)} - s\\nabla f(x^{(k)}), \\quad \\text{for } k=0,1,2,\\ldots \\quad (GD)\\]\n",
+    "\\begin{equation}\n",
+    "\\label{GD}\n",
+    "\\vv x^{(k+1)} = \\vv x^{(k)} - s\\nabla f(\\vv x^{(k)}), \\quad \\text{for } k=0,1,2,\\ldots \\quad (\\text{GD})\n",
+    "\\end{equation}\n",
     "\n",
-    "where $s>0$ is called the step size. The update rule (GD) moves you in the direction of a local minimum if $s>0$, but be careful, because if $s$ is too large, you can overshoot (we'll see more about this later).\n",
+    "where $s>0$ is called the _step size_. The update rule [(GD)](#GD) moves you in the direction of a local minimum if $s>0$, but be careful, because if $s$ is too large, you can overshoot (we'll see more about this later).\n",
     "\n",
-    "Because we know that $\\nabla f(x^*)=0$ if $x^*$ is a local minima, we can use the norm of the gradient as a stopping criterion, e.g., if $||\\nabla f(x^{(k)})||_2 \\leq \\varepsilon$ for some small $\\varepsilon>0$, we stop updating our iterate because $x^{(k)}$ is \"close enough\" to $x^*$ (typical choice of $\\varepsilon$ are $10^{-7}$ or $10^{-6}$, depending on how precise of a solution is required).\n",
+    "Because we know that $\\nabla f(\\vv x^*)=0$ if $\\vv x^*$ is a local minima, we can use the norm of the gradient as a stopping criterion, i.e., if $\\|\\nabla f(\\vv x^{(k)})\\| \\leq \\epsilon$ for some small $\\epsilon>0$, we stop updating our iterate because $\\vv x^{(k)}$ is \"close enough\" to $\\vv x^*$ (typical choice of $\\epsilon$ are $10^{-4}$ or $10^{-6}$, depending on how precise of a solution is required).\n",
     "\n",
-    "Before looking at some examples of (GD) in action, let's try to get some intuition as to why this works. Suppose we are currently at $x^{(k)}$. Let's form a linear approximation of $f(x)$ near $x^{(k)}$ using its first-order Taylor series approximation:\n",
+    "Before looking at some examples of [(GD)](#GD) in action, let's try to get some intuition as to why it might work. Suppose we are currently at $\\vv x^{(k)}$: let's form a _linear approximation_ of $f(\\vv x)$ near $\\vv x^{(k)}$ using its _first-order Taylor series approximation_:\n",
     "\n",
-    "\\[f(x) \\approx f(x^{(k)}) + \\nabla f(x^{(k)})^T(x-x^{(k)}) \\quad (TS)\\]\n",
+    "\\begin{equation}\n",
+    "\\label{TS}\n",
+    "f(\\vv x) \\approx \\underbrace{f(\\vv x^{(k)})}_{\\text{base point}} + \\underbrace{\\nabla f(\\vv x^{(k)})^T}_{\\text{how } f \\text{ changes at } x^{(k)}}\\underbrace{(\\vv x-\\vv x^{(k)})}_{\\text{direction of change}} \\quad (\\text{TS})\n",
+    "\\end{equation}\n",
     "\n",
-    "As you can see from the figure, (TS) is a very good approximation of $f(x)$ when $x$ is not too far from $x^{(k)}$, but gets worse as we move further away.\n",
+    ":::{figure}../figures/14-GD.jpg\n",
+    ":label:GD_fig\n",
+    ":alt:GD\n",
+    ":width: 500px\n",
+    ":align: center\n",
+    ":::\n",
     "\n",
-    "Let's use (TS) to define our next point $x^{(k+1)}$ so that $f(x^{(k+1)}) \\leq f(x^{(k)})$. If we define $\\Delta x^{(k)} = x^{(k+1)} - x^{(k)}$, then evaluating (TS) at point $x^{(k+1)}$ becomes\n",
+    "As you can see from the [figure](#GD_fig), [(TS)](#TS) is a very good approximation of $f(\\vv x)$ when $\\vv x$ is not too far from $\\vv x^{(k)}$, but gets worse as we move further away.\n",
     "\n",
-    "\\[f(x^{(k+1)}) - f(x^{(k)}) \\approx \\nabla f(x^{(k)})^T \\Delta x^{(k)} (= \\langle \\nabla f(x^{(k)}), \\Delta x^{(k)} \\rangle)\\]\n",
+    "Let's use [(TS)](#TS) to define our next point $\\vv x^{(k+1)}$ so that $f(\\vv x^{(k+1)}) < f(\\vv x^{(k)})$. If we define $\\Delta \\vv x^{(k)} = \\vv x^{(k+1)} - \\vv x^{(k)}$, then evaluating [(TS)](#TS) at point $\\vv x^{(k+1)}$ becomes\n",
     "\n",
-    "So that if we want $f(x^{(k+1)}) \\leq f(x^{(k)})$, then we should find a nearby $x^{(k+1)}$ such that\n",
+    "$$\n",
+    "f(\\vv x^{(k+1)}) - f(\\vv x^{(k)}) \\approx \\nabla f(\\vv x^{(k)})^T \\Delta \\vv x^{(k)} \\left(= \\langle \\nabla f(\\vv x^{(k)}), \\Delta \\vv x^{(k)} \\rangle\\right)\n",
+    "$$\n",
     "\n",
-    "\\[\\nabla f(x^{(k)})^T \\Delta x^{(k)} \\leq 0. \\quad (*)\\]\n",
+    "so that if we want $f(\\vv x^{(k+1)}) < f(\\vv x^{(k)})$, then we should find a nearby $\\vv x^{(k+1)}$ such that\n",
     "\n",
-    "Now, assuming that $\\nabla f(x^{(k)}) \\neq 0$ (so we're not at a local extremum), a clear choice for $\\Delta x^{(k)}$ is $-s\\nabla f(x^{(k)})$ for $s>0$ a step size chosen small enough so that (TS) is a good approximation. In that case, we have\n",
+    "\\begin{equation}\n",
+    "\\label{good_neighb}\n",
+    "\\nabla f(\\vv x^{(k)})^T \\Delta \\vv x^{(k)} < 0.\n",
+    "\\end{equation}\n",
     "\n",
-    "\\[\\nabla f(x^{(k)})^T \\Delta x^{(k)} = -s||\\nabla f(x^{(k)})||^2 < 0.\\]\n",
+    "Now, assuming that $\\nabla f(\\vv x^{(k)}) \\neq \\vv 0$ (so we're not at a local extremum), a clear choice for $\\Delta \\vv x^{(k)}$ is $-s\\nabla f(\\vv x^{(k)})$ for $s>0$ a step size chosen small enough so that [(TS)](#TS) is a good approximation. In that case, we have\n",
     "\n",
-    "In general then, any choice $\\Delta x^{(k)}$ such that (*) holds is a valid descent direction. Geometrically, this is illustrated in the picture below:\n",
+    "$$\n",
+    "\\nabla f(\\vv x^{(k)})^T \\Delta \\vv x^{(k)} = -s\\|\\nabla f(\\vv x^{(k)})\\|^2 < 0.\n",
+    "$$\n",
     "\n",
-    "[Image placeholder for descent direction illustration]\n",
+    "In general though, any choice $\\Delta \\vv x^{(k)}$ such that [](#good_neighb) holds is a valid descent direction. Geometrically, this is illustrated in the picture below:\n",
     "\n",
-    "Example: Let's use gradient descent to minimize $f(x) = \\frac{1}{2}||x||^2$. This is a silly example, but one we can easily compute iterates by hand for. Here $\\nabla f(x) = x$, so our descent direction is $-\\nabla f(x) = -x$. Let's use $x\\in\\mathbb{R}^2$ and an initial guess of $x^{(0)} = (1,1)$. We'll use a step size of $s = \\frac{1}{2}$. Then\n",
     "\n",
-    "\\[x^{(1)} = x^{(0)} - \\frac{1}{2}\\nabla f(x^{(0)}) = \\begin{bmatrix} 1 \\\\ 1 \\end{bmatrix} - \\frac{1}{2}\\begin{bmatrix} 1 \\\\ 1 \\end{bmatrix} = \\frac{1}{2}\\begin{bmatrix} 1 \\\\ 1 \\end{bmatrix} = \\frac{1}{2}x^{(0)}\\]\n",
+    ":::{figure}../figures/14-GD_dir.jpg\n",
+    ":label:GD_dir\n",
+    ":alt:GD direction\n",
+    ":width: 400px\n",
+    ":align: center\n",
+    ":::\n",
     "\n",
-    "\\[x^{(2)} = x^{(1)} - \\frac{1}{2}\\nabla f(x^{(1)}) = \\frac{1}{2}\\begin{bmatrix} 1 \\\\ 1 \\end{bmatrix} - \\frac{1}{2}\\left(\\frac{1}{2}\\begin{bmatrix} 1 \\\\ 1 \\end{bmatrix}\\right) = \\frac{1}{4}\\begin{bmatrix} 1 \\\\ 1 \\end{bmatrix} = \\left(\\frac{1}{2}\\right)^2 x^{(0)}\\]\n",
+    ":::{prf:example}\n",
+    ":label: eg1\n",
+    "Let's use gradient descent to minimize $f(\\vv x) = \\frac{1}{2}\\|\\vv x\\|^2$. This is a silly example, but one we can easily compute iterates by hand for. Here $\\nabla f(\\vv x) = \\vv x$, so our descent direction is $-\\nabla f(\\vv x) = -\\vv x$. Let's use $\\vv x\\in\\mathbb{R}^2$ and an initial guess of $\\vv x^{(0)} = (1,1)$. We'll use a step size of $s = \\frac{1}{2}$. Then\n",
     "\n",
-    "\\[x^{(k)} = \\left(\\frac{1}{2}\\right)^k \\begin{bmatrix} 1 \\\\ 1 \\end{bmatrix}. \\quad \\text{So we see that } x^{(k)} \\to x^* = 0 \\text{ exponentially quickly}\\]\n",
-    "at rate $\\left(\\frac{1}{2}\\right)$.\n",
+    "$$\n",
+    "\\vv x^{(1)} = \\bm 1 \\\\ 1\\em, \\vv x^{(1)} = \\vv x^{(0)} - \\frac{1}{2}\\nabla f(\\vv x^{(0)}) = \\begin{bmatrix} 1 \\\\ 1 \\end{bmatrix} - \\frac{1}{2}\\begin{bmatrix} 1 \\\\ 1 \\end{bmatrix} = \\frac{1}{2}\\begin{bmatrix} 1 \\\\ 1 \\end{bmatrix} = \\frac{1}{2}\\vv x^{(0)} \\\\\n",
+    "\\vv x^{(2)} = x^{(1)} - \\frac{1}{2}\\nabla f(\\vv x^{(1)}) = \\frac{1}{2}\\begin{bmatrix} 1 \\\\ 1 \\end{bmatrix} - \\left(\\frac{1}{2}\\right)^2 \\begin{bmatrix} 1 \\\\ 1 \\end{bmatrix} = \\frac{1}{4}\\begin{bmatrix} 1 \\\\ 1 \\end{bmatrix} = \\left(\\frac{1}{2}\\right)^2 \\vv x^{(0)} \\\\\n",
+    "\\ldots \\vv x^{(k)} = \\left(\\frac{1}{2}\\right)^k \\begin{bmatrix} 1 \\\\ 1 \\end{bmatrix}.\n",
+    "$$\n",
+    "So we see that $$\\vv x^{(k)} \\to \\vv x^* = \\vv 0$$ exponentially quickly \n",
+    "at rate $\\left(\\frac{1}{2}\\right)^k$.\n",
+    ":::\n",
     "\n",
-    "Example OUTLINE NOTES PLEASE ADD A $||Ax-b||^2$ EXAMPLE THAT'S MORE INTERESTING OR TO DO MOSTLY COMPUTATIONAL SHOW A GOOD STEPSIZE CHOICE AND ONE WHERE IT DIVERGES.\n",
-    "\n",
-    "Zig-zags and what to do about them\n",
-    "\n",
-    "Let's consider a very simple optimization over $x\\in\\mathbb{R}^2$ with cost function\n",
-    "\n",
-    "\\[f(x_1, x_2) = \\frac{1}{2}(x^2 + by^2)\\]\n",
-    "\n",
-    "where we'll let $a<b=1$ w.l.o.g. The optimal solution is obviously $(x^*, y^*) = (0,0)$ but we'll use this to illustrate how gradient descent can get you into tricky situations.\n",
-    "\n",
-    "Suppose we run gradient descent on $f$, and we further allow ourselves to pick the best possible step size $s_k$ at each iteration, i.e., we choose step size"
+    "**TO DO**: Example OUTLINE NOTES PLEASE ADD A $||A\\vv x-\\vv b||^2$ EXAMPLE THAT'S MORE INTERESTING OR TO DO MOSTLY COMPUTATIONAL SHOW A GOOD STEPSIZE CHOICE AND ONE WHERE IT DIVERGES."
    ]
   },
   {
@@ -113,60 +133,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$s_k = \\argmin_{s \\in [0,1]} F(x^{(k)} - sf(x^{(k)}))$\n",
+    "## Zig-zags and What to do About Them\n",
     "\n",
-    "and the update $x^{(k+1)} = x^{(k)} - s_k f(x^{(k)})$.\n",
+    "Let's consider a very simple optimization over $\\vv x\\in\\mathbb{R}^2$ with cost function\n",
     "\n",
-    "This is called exact line search for selecting the step size, and is widely used in practice.\n",
-    "If we use this choice of step size $s_k$, then it is possible to write an explicit formula\n",
-    "for our iterates $(x^k, y^k)$ as we progress down the bowl. Starting at $(x^{(0)},y^{(0)})=(b,1)$, we\n",
-    "get\n",
+    "$$\n",
+    "f(\\vv x_1, \\vv x_2) = \\frac{1}{2}(x^2 + by^2)\n",
+    "$$\n",
+    "\n",
+    "where we'll let $0<b\\leq 1$ vary. The optimal solution is obviously $(x^*, y^*) = (0,0)$ but we'll use this to illustrate how gradient descent can get you into trouble sometimes.\n",
+    "\n",
+    "Suppose we run gradient descent on $f$, and we further allow ourselves to pick the best possible step size $s_k$ at each iteration, i.e., we choose step size\n",
+    "\n",
+    "$$\n",
+    "s_k = \\argmin_{s > 0} f(\\vv x^{(k)} - s\\nabla f(\\vv x^{(k)}))\n",
+    "$$\n",
+    "\n",
+    "and then update $\\vv x^{(k+1)} = \\vv x^{(k)} - s_k \\nabla f(\\vv x^{(k)})$.\n",
+    "\n",
+    "This is called _exact line search_ for selecting the step size, and is widely used in practice. If we use this choice of step size $s_k$, then it is possible to write an explicit formula for our iterates $(x^{(k)}, y^{(k)})$ as we progress down the bowl. Starting at $(x^{(0)},y^{(0)})=(b,1)$, we get\n",
     "\\begin{equation}\n",
-    "x^{(k)} = b \\left(\\frac{b-1}{b+1}\\right)^k, \\quad y^{(k)} = \\left(\\frac{1-b}{1+b}\\right)^k, \\quad F(x^{(k)},y^{(k)}) = \\left(\\frac{1-b}{1+b}\\right)^{2k} F(x^{(0)},y^{(0)}). \\quad (8)\n",
+    "\\label{line-search}\n",
+    "x^{(k)} = b \\left(\\frac{b-1}{b+1}\\right)^k, \\quad y^{(k)} = \\left(\\frac{1-b}{1+b}\\right)^k, \\quad f(x^{(k)},y^{(k)}) = \\left(\\frac{1-b}{1+b}\\right)^{2k} f(x^{(0)},y^{(0)}).\n",
     "\\end{equation}\n",
     "\n",
-    "If $b=1$, which corresponds to a function with level sets that are perfect circles,\n",
-    "we succeed immediately in one step $(x^{(1)} = y^{(1)} = 0)$. This is because the gradient\n",
-    "always points directly to the optimal point $(0,0)$.\n",
     "\n",
-    "\\begin{tikzpicture}\n",
-    "\\draw (0,0) circle (1cm);\n",
-    "\\node at (0,0) {$\\bullet$};\n",
-    "\\foreach \\angle in {0,45,...,315}\n",
-    "    \\draw[-latex] (0,0) -- (\\angle:1cm);\n",
-    "\\node at (1.5,0) {$b=1$ case};\n",
-    "\\node[right] at (1,0) {$\\rightarrow$ $\\nabla F(x,y)$ always points to the optimal};\n",
-    "\\node[right] at (1,-0.5) {point $x^* = (0,0)$};\n",
-    "\\end{tikzpicture}\n",
+    "If $b=1$, which corresponds to a function with level sets that are perfect circles,\n",
+    "we succeed immediately in one step $(x^{(1)} = y^{(1)} = 0)$. This is because the gradient always points directly to the optimal point $(0,0)$:\n",
+    "\n",
+    ":::{figure}../figures/14-point.jpg\n",
+    ":label:point\n",
+    ":alt:point\n",
+    ":width: 400px\n",
+    ":align: center\n",
+    ":::\n",
     "\n",
     "The real purpose of this example is seen when $b$ is small. The crucial ratio in\n",
-    "equation (8) is\n",
-    "\\[\n",
+    "equation [](#line-search) is\n",
+    "$$\n",
     "r = \\frac{b-1}{b+1},\n",
-    "\\]\n",
+    "$$\n",
     "\n",
-    "If $r$ is small, $(x^{(k)},y^{(k)})$ converges to $(0,0)$ very quickly. However, if $r$ is close to\n",
-    "1, then this convergence is very slow. For example, if $b = \\frac{1}{10}$, then $r = \\frac{9}{11}$, for $b = \\frac{1}{100}$, $r = \\frac{99}{101}$.\n",
+    "If $r$ is small, $(x^{(k)},y^{(k)})$ converges to $(0,0)$ very quickly. However, if $r$ is close to 1, then this convergence is very slow. For example, if $b = \\frac{1}{10}$, then $r = \\frac{9}{11}$; for $b = \\frac{1}{100}$, $r = \\frac{99}{101}$.\n",
     "\n",
-    "This means we need to take many more gradient steps to get close to $x^* = (0,0)$. The\n",
-    "picture below highlights what's going wrong: for small $b$, the level sets become elongated\n",
-    "ellipses, so that following gradients leads to us zig-zagging our way to the origin instead of\n",
-    "taking a straight path. It is this zig-zagging that causes slow convergence.\n",
+    "This means we need to take many more gradient steps to get close to $\\vv x^* = (0,0)$. The [picture below](#zigzag) highlights what's going wrong: for small $b$, the level sets become elongated ellipses, so that following gradients leads to us zig-zagging our way to the origin instead of taking a straight path. It is this zig-zagging that causes slow convergence.\n",
     "\n",
-    "\\begin{tikzpicture}\n",
-    "\\draw[->] (-10,0) -- (10,0) node[right] {$x_1$};\n",
-    "\\draw[->] (0,-4) -- (0,4) node[above] {$x_2$};\n",
-    "\\draw[dashed] (0,0) ellipse (8cm and 3cm);\n",
-    "\\draw[dashed] (0,0) ellipse (6cm and 2.25cm);\n",
-    "\\draw[dashed] (0,0) ellipse (4cm and 1.5cm);\n",
-    "\\draw[dashed] (0,0) ellipse (2cm and 0.75cm);\n",
-    "\\draw[red,-latex,thick] (8,0) -- (7.5,1) node[above] {$x^{(1)}$};\n",
-    "\\draw[red,-latex,thick] (7.5,1) -- (6,0.5);\n",
-    "\\draw[red,-latex,thick] (6,0.5) -- (5.5,1);\n",
-    "\\draw[red,-latex,thick] (5.5,1) -- (4,0.5);\n",
-    "\\draw[red,-latex,thick] (4,0.5) -- (3.5,0.75);\n",
-    "\\node[below right] at (8,0) {$x^{(0)}$};\n",
-    "\\end{tikzpicture}"
+    ":::{figure}../figures/14-zigzag.jpg\n",
+    ":label:zigzag\n",
+    ":alt:zigzag\n",
+    ":width: 500px\n",
+    ":align: center\n",
+    ":::"
    ]
   },
   {
