almost done with lec 21

--- a/12_Ch_13_Optimization/142-Gradient_Descent.ipynb
+++ b/12_Ch_13_Optimization/142-Gradient_Descent.ipynb
@@ -45,7 +45,10 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- "
+    "- what is the gradient descent algorithm\n",
+    "- examples of implementing the gradient descent algorithm\n",
+    "- what is exact line search\n",
+    "- when does gradient descent perform poorly and how to address it"
    ]
   },
   {
@@ -183,119 +186,96 @@
     ":alt:zigzag\n",
     ":width: 500px\n",
     ":align: center\n",
-    ":::"
+    ":::\n",
+    "\n",
+    "So what's going wrong here? If we write $f(\\vv x)$ as a quadratic form, it is:\n",
+    "\n",
+    "$$\n",
+    "f(\\vv x) = \\begin{bmatrix} x & y \\end{bmatrix}^T \\begin{bmatrix} 1 & 0 \\\\ 0 & b \\end{bmatrix} \\begin{bmatrix} x \\\\ y \\end{bmatrix} = \\vv x^T K \\vv x\n",
+    "$$\n",
+    "\n",
+    "Notice that the _condition number_ of the matrix $K$ is precisely $\\frac{1}{b}$, which is large for small $b$. This means that one direction (in this case the x-axis) is penalized much more than the other (the y-axis). This leads to stretched out level sets, which leads to zigzags and slow convergence. How can we fix this?"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Newton's Method (optional)\n",
     "\n",
-    "So what's going wrong here? If we write $F(x)$ as a quadratic form, it is:\n",
+    "To derive the gradient descent method [(GD)](#GD), we used a first order approximation of $f(\\vv x)$ near $\\vv x^{(k)}$ to figure out what direction we should move in. What the last example we saw showed was that when the gradient changes quickly (look at the direction of the gradients in the zizag plot; they are all over the place!), things can go wrong. This suggests that we should also account for how quickly the gradient changes: we need to compute the \"gradient of the gradient\", a.k.a. the _Hessian of $f$ $\\nabla^2 f(\\vv x)$_. The Hessian of a function $f: \\mathbb{R}^n \\to \\mathbb{R}$\n",
+    "is an $n \\times n$ symmetric matrix with entries given by $2^{nd}$ order partial derivatives of $f$:\n",
     "\n",
-    "\\[\n",
-    "F(x) = \\begin{bmatrix} x^T & 1 \\end{bmatrix} \\begin{bmatrix} 0 & 0 \\\\ 0 & b \\end{bmatrix} \\begin{bmatrix} x \\\\ 1 \\end{bmatrix} = x^T b x\n",
-    "\\]\n",
+    "$$\n",
+    "\\bm \\nabla^2 f(\\vv x)\\em_{ij} = \\frac{\\partial^2 f}{\\partial x_i \\partial x_j}(\\vv x)\n",
+    "$$\n",
     "\n",
-    "Notice that the condition number of the matrix $K$ is precisely $\\frac{1}{b}$, which is large for\n",
-    "small $b$. This means that one direction (in this case the x-axis) is penalized much more\n",
-    "than the other (the y-axis). This leads to stretched out level sets, which leads to\n",
-    "zig-zags and slow convergence. How can we fix this?\n",
-    "\n",
-    "Newton's Method (continued)\n",
-    "\n",
-    "To derive the gradient descent method (GD), we used a first order approximation of\n",
-    "$F(x)$ near $x^{(k)}$ to figure out what direction we should move in. What if in this example\n",
-    "we saw steeper and shallower directions where the function changes quickly (look at the contours of the\n",
-    "function in the figure; they are all very thin ellipses)? Isn't one step enough?\n",
-    "\n",
-    "We should also account for how quickly the gradient changes: we need to compute the\n",
-    "\"gradient of the gradient\", a.k.a. the Hessian of $F$ at $x$. The Hessian of a function $f: \\mathbb{R}^n \\to \\mathbb{R}$\n",
-    "is an $n \\times n$ symmetric matrix with entries given by 2nd order partial derivatives of $f$:\n",
-    "\n",
-    "\\[\n",
-    "[\\nabla^2 f(x)]_{ij} = \\frac{\\partial^2 f}{\\partial x_i \\partial x_j}(x)\n",
-    "\\]\n",
-    "\n",
-    "The Hessian tells us how quickly the gradient changes in the same way $f'(x)$ tells us\n",
+    "The Hessian tells us how quickly the gradient changes in the same way $f''(x)$ tells us\n",
     "how quickly $f(x)$ changes for a scalar function $f(x)$. The Hessian lets us make\n",
-    "a second order Taylor series approximation to our function $F(x)$ near our current\n",
-    "guess $x^{(k)}$:\n",
+    "a _second order Taylor series approximation_ to our function $f(\\vv x)$ near our current guess $\\vv x^{(k)}$:\n",
     "\n",
-    "\\[\n",
-    "F(x) \\approx F(x^{(k)}) + \\nabla f(x^{(k)})^T(x-x^{(k)}) + (x-x^{(k)})^T \\nabla^2 f(x^{(k)})(x-x^{(k)}), \\quad (6)\n",
-    "\\]\n",
+    "\\begin{equation}\n",
+    "\\label{second_order}\n",
+    "f(\\vv x) \\approx f(\\vv x^{(k)}) + \\nabla f(\\vv x^{(k)})^T(\\vv x- \\vv x^{(k)}) + (\\vv x-\\vv x^{(k)})^T \\nabla^2 f(\\vv x^{(k)})(\\vv x- \\vv x^{(k)}),\n",
+    "\\end{equation}\n",
     "\n",
-    "which provides a local quadratic approximation to $F(x)$ near $F(x^{(k)})$:\n",
     "\n",
-    "\\begin{tikzpicture}\n",
-    "\\draw[->] (-2,0) -- (2,0) node[right] {$x$};\n",
-    "\\draw[->] (0,-0.5) -- (0,2) node[above] {$F(x)$};\n",
-    "\\draw[thick, blue] plot[domain=-2:2,samples=100] (\\x,{0.5*\\x*\\x});\n",
-    "\\draw[thick, red] plot[domain=-1:1,samples=100] (\\x,{0.5+0.5*\\x*\\x});\n",
-    "\\node[blue] at (1.5,1.5) {$F(x)$};\n",
-    "\\node[red] at (-1.5,1.5) {quad approx};\n",
-    "\\fill[blue] (0,0.5) circle (2pt);\n",
-    "\\node[right] at (0,0.5) {$F(x^{(k)})$};\n",
-    "\\end{tikzpicture}\n",
+    "which provides a local _quadratic approximation_ to $f(\\vv x)$ near $f(\\vv x^{(k)})$:\n",
     "\n",
-    "As before, if we let $\\Delta x^{(k)} = x^{(k+1)} - x^{(k)}$, we can rewrite (6) as\n",
+    ":::{figure}../figures/14-newton.jpg\n",
+    ":label:newton\n",
+    ":alt:newton\n",
+    ":width: 00px\n",
+    ":align: center\n",
+    ":::\n",
     "\n",
-    "\\[\n",
-    "F(x^{(k+1)}) - F(x^{(k)}) \\approx (\\Delta x^{(k)})^T \\nabla F(x^{(k)}) + \\frac{1}{2} \\nabla F(x^{(k)})^T \\Delta x^{(k)}. \\quad (7a)\n",
-    "\\]\n",
+    "As before, if we let $\\Delta \\vv x^{(k)} = \\vv x^{(k+1)} - \\vv x^{(k)}$, we can rewrite [](#second_order) as\n",
     "\n",
-    "Since we want to make $F(x^{(k+1)}) - F(x^{(k)})$ as small as possible, it makes sense\n",
-    "to pick $\\Delta x^{(k)}$ to minimize the RHS of (7a), which is another minimization problem!\n",
+    "\\begin{equation}\n",
+    "\\label{second_order_re}\n",
+    "f(\\vv x^{(k+1)}) - f(\\vv x^{(k)}) \\approx (\\Delta \\vv x^{(k)})^T \\nabla^2 f(\\vv x^{(k)}) \\Delta \\vv x^{(k)} +  \\nabla f(\\vv x^{(k)})^T \\Delta \\vv x^{(k)}. \n",
+    "\\end{equation}\n",
     "\n",
-    "We'll focus on the setting where $\\nabla^2 F(x^{(k)})$ is positive definite - this corresponds to\n",
-    "settings where our function is convex. In this case, the RHS of (7a) is a positive definite\n",
-    "quadratic function, which is minimized at:\n",
+    "Since we want to make $f(\\vv x^{(k+1)}) - f(\\vv x^{(k)})$ as small as possible, it makes sense to pick $\\Delta \\vv x^{(k)}$ to minimize the RHS of [](#second_order_re), which is another minimization problem!\n",
     "\n",
-    "\\[\n",
-    "\\Delta x^{(k)} = - \\nabla^2 F(x^{(k)})^{-1} \\nabla F(x^{(k)}).\n",
-    "\\]\n",
+    "We'll focus on the setting where $\\nabla^2 f(\\vv x^{(k)})$ is positive definite: this corresponds to settings where our function is convex. In this case, the RHS of [](#second_order_re) is a positive definite quadratic function, which is minimized at:\n",
     "\n",
-    "Using this descent direction instead of $-\\nabla F(x^{(k)})$ yields Newton's Method:\n",
+    "$$\n",
+    "\\Delta \\vv x^{(k)} = - \\nabla^2 f(\\vv x^{(k)})^{-1} \\nabla f(\\vv x^{(k)}).\n",
+    "$$\n",
     "\n",
-    "\\[\n",
-    "x^{(k+1)} = x^{(k)} - \\nabla^2 F(x^{(k)})^{-1} \\nabla F(x^{(k)}).\n",
-    "\\]\n",
+    "Using this descent direction instead of $-\\nabla f(\\vv x^{(k)})$ yields _Newton's Method_:\n",
+    "\n",
+    "$$\n",
+    "\\vv x^{(k+1)} = \\vv x^{(k)} - \\nabla^2 f(\\vv x^{(k)})^{-1} \\nabla f(\\vv x^{(k)}).\n",
+    "$$\n",
     "\n",
     "The idea behind Newton's Method is to \"unstretch\" the stretched out directions,\n",
     "so that to our algorithm, the level sets of a function are locally circles. If\n",
     "we look at our test example above, note that:\n",
     "\n",
-    "\\[\n",
-    "\\nabla^2 F(x) = \\begin{bmatrix} 1 & \\\\ & b \\end{bmatrix} \\Rightarrow \\nabla^2 F(x)^{-1} = \\begin{bmatrix} 1 & \\\\ & \\frac{1}{b} \\end{bmatrix}\n",
-    "\\]\n",
+    "$$\n",
+    "\\nabla^2 f(\\vv x) = \\begin{bmatrix} 1 & \\\\ & b \\end{bmatrix} \\Rightarrow \\nabla^2 f(\\vv x)^{-1} = \\begin{bmatrix} 1 & \\\\ & \\frac{1}{b} \\end{bmatrix}\n",
+    "$$\n",
     "\n",
-    "so that for $x^{(0)} = (b,1)$, we have:\n",
+    "so that for $\\vv x^{(0)} = (b,1)$, we have:\n",
     "\n",
     "\\begin{align*}\n",
-    "x^{(1)} &= x^{(0)} - \\nabla^2 F(x)^{-1} \\nabla F(x) \\\\\n",
+    "\\vv x^{(1)} &= \\vv x^{(0)} - \\nabla^2 f(\\vv x)^{-1} \\nabla f(\\vv x) \\\\\n",
     "&= \\begin{bmatrix} b \\\\ 1 \\end{bmatrix} - \\begin{bmatrix} 1 & \\\\ & \\frac{1}{b} \\end{bmatrix} \\begin{bmatrix} b \\\\ b \\end{bmatrix} = \\begin{bmatrix} 0 \\\\ 0 \\end{bmatrix}\n",
     "\\end{align*}\n",
     "\n",
-    "i.e., we converge in one step no matter what the choice of $b$ is in $F(x) = \\frac{1}{2}(x^2+by^2)$!\n",
+    "i.e., we converge in one step no matter what the choice of $b$ is in $f(x, y) = \\frac{1}{2}(x^2+by^2)$!\n",
     "\n",
     "The cost of this fast convergence though is that at each update, we need to solve\n",
     "a linear system of equations of the form\n",
     "\n",
-    "\\[\n",
-    "\\nabla^2 F(x^{(k)}) \\Delta x^{(k)} = \\nabla F(x^{(k)})\n",
-    "\\]\n",
+    "$$\n",
+    "\\nabla^2 f(\\vv x^{(k)}) \\Delta \\vv x^{(k)} = \\nabla f(\\vv x^{(k)})\n",
+    "$$\n",
     "\n",
-    "which may be expensive if $x$ is a high-dimensional vector. It is for this reason that\n",
-    "gradient descent based methods are the predominant methods used in machine learning,\n",
-    "where oftentimes the dimensionality of $x$ can be on the order of millions or\n",
-    "billions."
+    "which may be expensive if $\\vv x$ is a high-dimensional vector. It is for this reason that gradient descent based methods are the predominant methods used in machine learning, where oftentimes the dimensionality of $\\vv x\\in \\mathbb{R}^n$ can be on the order of millions or billions."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -303,6 +283,13 @@
    "source": [
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/12_Ch_13_Optimization/142-Gradient_Descent.ipynb)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
